cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

# -----------------------------------------------------------------------------------------------------------------------------
# SUB-DIRECTORIES
# -----------------------------------------------------------------------------------------------------------------------------                    

add_subdirectory("SnippetUtils")
add_subdirectory("SnippetRender")
add_subdirectory("SnippetHelloWorld")

